clean up unused import

--- a/nbs/00_text_main_lm.ipynb
+++ b/nbs/00_text_main_lm.ipynb
@@ -39,8 +39,7 @@
    "source": [
     "#| export\n",
     "from __future__ import annotations\n",
-    "from datasets import DatasetDict,Dataset,IterableDataset\n",
-    "from pathlib import Path\n",
+    "from datasets import Dataset\n",
     "from that_nlp_library.utils import *\n",
     "from that_nlp_library.text_main import *\n",
     "from functools import partial\n",
