--- a/nbs/00_text_main_lm_streaming.ipynb
+++ b/nbs/00_text_main_lm_streaming.ipynb
@@ -40,8 +40,7 @@
    "source": [
     "#| export\n",
     "from __future__ import annotations\n",
-    "from datasets import DatasetDict,Dataset,IterableDataset\n",
-    "from pathlib import Path\n",
+    "from datasets import Dataset,IterableDataset\n",
     "from that_nlp_library.utils import *\n",
     "from that_nlp_library.text_main import tokenize_function\n",
     "from that_nlp_library.text_main_streaming import *\n",
