--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "#| export\n",
     "from __future__ import annotations\n",
-    "import os, sys\n",
+    "import os\n",
     "from transformers import Trainer, TrainingArguments, AutoConfig\n",
     "from datasets import DatasetDict,Dataset\n",
     "import torch\n",
@@ -55,7 +55,6 @@
     "import math\n",
     "from functools import partial\n",
     "import evaluate\n",
-    "import numpy as np\n",
     "from that_nlp_library.utils import *\n",
     "from that_nlp_library.text_main_lm import TextDataLMController\n",
     "from that_nlp_library.text_main_lm_streaming import TextDataLMControllerStreaming\n",
