--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "#| export\n",
     "from __future__ import annotations\n",
-    "import os, sys\n",
+    "import os\n",
     "from transformers import Trainer, TrainingArguments, AutoConfig\n",
     "from datasets import DatasetDict,Dataset\n",
     "import torch\n",
