--- a/nbs/06_models.roberta.conditional_prob_classifiers.ipynb
+++ b/nbs/06_models.roberta.conditional_prob_classifiers.ipynb
@@ -44,16 +44,13 @@
    "source": [
     "#| export\n",
     "from __future__ import annotations\n",
-    "from collections import defaultdict\n",
     "import numpy as np\n",
     "import torch\n",
     "from transformers.models.roberta.configuration_roberta import RobertaConfig\n",
     "from transformers.models.roberta.modeling_roberta import RobertaModel\n",
-    "from that_nlp_library.models.roberta.classifiers import ConcatHeadSimple\n",
     "from sklearn.preprocessing import MultiLabelBinarizer\n",
     "from transformers.modeling_outputs import SequenceClassifierOutput\n",
-    "from transformers.models.roberta.modeling_roberta import RobertaPreTrainedModel\n",
-    "from that_nlp_library.model_main import loss_for_classification"
+    "from transformers.models.roberta.modeling_roberta import RobertaPreTrainedModel"
    ]
   },
   {
