quick fix readme

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **`TextDataController` (for text processing)**"
+    "### **Text Data Controller: `TextDataController` (for text processing)**"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TextDataLMController (for text processing)\n",
+    "### Text Data Controlelr for Language Model: `TextDataLMController`\n",
     "\n",
     "Similarly to `TextDatController`, `TextDataLMController` also provide a list of processings (except for **Label Processing**, **Upsampling** and **Text Augmentation**). The controller also allow tokenization line-by-line or by token concatenation. \n",
     "Visit the tutorial [here](https://anhquan0412.github.io/that-nlp-library/text_main_lm.html)\n",
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `ModelLMController`\n",
+    "### Language Model Controller: `ModelLMController`\n",
     "\n",
     "The library can train a [masked language modeling](https://anhquan0412.github.io/that-nlp-library/model_lm_roberta_tutorial.html) (BERT, roBERTa …) or a [causal language model](https://anhquan0412.github.io/that-nlp-library/model_lm_gpt2_tutorial.html) (GPT) either from scratch or from existing pretrained language models. "
    ]
