var name quick fix

--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -103,7 +103,7 @@
     "        model = model_class.from_pretrained(cpoint_path,config=config,**model_kwargs).to(device)\n",
     "    \n",
     "    print(f'Total parameters: {sum(param.numel() for param in model.parameters())}')\n",
-    "    print(f'Total trainable parameters: {sum(param.numel() for param in model.parameters() if p.requires_grad)}')\n",
+    "    print(f'Total trainable parameters: {sum(param.numel() for param in model.parameters() if param.requires_grad)}')\n",
     "    \n",
     "    return model"
    ]
